Switched to using a fixed thread pool. Minor change to batchQuery method.